# urban-heatwave-forecaster

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/processed/: athens_climatology_95p.csv  london_climatology_95p.csv  rome_climatology_95p.csv  stockholm_climatology_95p.csv
data/raw/: urban_vulnerability.csv
notebooks/: heatwave_risk_assessment.ipynb  heatwave_visualization.ipynb
src/urban_heatwave_forecaster/: cli.py  climate_normals.py  data_fetcher.py  detect_heatwaves.py  fetch_historical.py  risk_model.py
